# sam2counts

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  aligner.cpp  aligner.hpp  count.cpp  count.hpp  io_tools.cpp  io_tools.hpp  main.cpp  mime_io.cpp  mime_io.hpp  mime_io_oneSAM.cpp  mime_io_oneSAM.hpp  mime_io_paired.cpp  mime_io_paired.hpp  mime_io_single.cpp  mime_io_single.hpp  nucleobase.cpp  nucleobase.hpp  ref_map.cpp  ref_map.hpp  reference.cpp  reference.hpp  utils.cpp  utils.hpp
